fix mobile spacing

--- a/GCWeb/css/custom.css
+++ b/GCWeb/css/custom.css
@@ -59,8 +59,9 @@ main section.lnkbx ul li a {
 		font-size: 1.5em;
 }
 
-.mobile-breadcrumb {
-  padding-top: 0px !important;
+.gcweb-v2~#wb-bc ol {
+
+  margin-top: 5px !important;
 }
 
 }
